Adding links with HATEOAS